# reverse_asm

./: .gitignore  QUICKSTART.md  README.md  pyproject.toml
batch_output/: portfolio_index.yaml
batch_output/branching/: branching.asm  branching_analysis.yaml
batch_output/loop/: loop.asm  loop_analysis.yaml
batch_output/simple/: simple.asm  simple_analysis.yaml
batch_output/subroutine/: subroutine.asm  subroutine_analysis.yaml
docs/: Alignment Report.md  Architecture Overview.md  DESIGN_HANDOFF.md  DEVELOPMENT_GUIDE.md  MVP_COMPLETION_SUMMARY.md  TECHNICAL_DESIGN.md
examples/: create_sample_binary.py
output/: branching_analysis.yaml  branching_pseudocode.txt  branching_report.txt  simple_analysis.yaml  simple_pseudocode.txt  simple_report.txt
src/zos_reverse/: __init__.py  cfg_builder.py  classifier.py  cli.py  disassembler.py  ingestion.py  ir.py  pipeline.py  pseudocode.py  reconstructor.py  reporter.py
src/zos_reverse_asm.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: test_pipeline.py
