[project]
name = "zos-reverse-asm"
version = "0.1.0"
description = "z/OS Binary Reverse Engineering Tool - Lean MVP"
authors = [{name = "Principal Architect"}]
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}

dependencies = [
    "pyyaml>=6.0",
    "click>=8.1",
    "networkx>=3.0",
    "dataclasses-json>=0.6",
    "rich>=13.0",
    "structlog>=23.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-cov>=4.1",
    "black>=23.0",
    "ruff>=0.1",
    "mypy>=1.5"
]

[project.scripts]
zos-reverse = "zos_reverse.cli:main"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.ruff]
line-length = 100
select = ["E", "F", "B", "I"]

[tool.mypy]
python_version = "3.11"
strict = true
